--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Spring3HibernateApp</groupId>
 	<artifactId>Spring3HibernateApp</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>1.2-SNAPSHOT</version>
 	 <!-- <version>2020.04.1-SNAPSHOT</version> -->
 
